feat repository, service

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,3 +2,19 @@ spring:
   application:
     name: starlogue
 
+
+  datasource:
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost:5433/starlogue?currentSchema=public
+    username: postgres
+    password:
+  jpa:
+    hibernate:
+      ddl-auto: update
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        format_sql: true
+        jdbc:
+          time_zone: Asia/Seoul
+    show-sql: true
