--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5433/starlogue?currentSchema=public
     username: postgres
-    password:
+    password: ${DB_PASSWORD}
   jpa:
     hibernate:
       ddl-auto: update
@@ -17,4 +17,71 @@ spring:
         format_sql: true
         jdbc:
           time_zone: Asia/Seoul
-    show-sql: true
+   # show-sql: true
+    open-in-view: false
+
+
+
+  # ============================================
+  # Spring AI Configuration
+  # ============================================
+  ai:
+    openai:
+      api-key: ${OPENAI_API_KEY}
+      chat:
+        options:
+          model: gpt-4o-mini          # 비용 효율적인 모델
+          temperature: 0.8            # 흑역사 생성 시 창의성
+          max-tokens: 500
+      embedding:
+        options:
+          model: text-embedding-3-small  # 임베딩 모델
+
+    # PgVector 설정 (1.1.x)
+    vectorstore:
+      pgvector:
+        index-type: hnsw
+        distance-type: cosine_distance
+        dimensions: 1536
+        initialize-schema: true
+        schema-name: public
+        table-name: vector_store
+
+# ============================================
+# JWT Configuration
+# ============================================
+jwt:
+  secret: ${JWT_SECRET:starlogueSecretKeyForJwtAuthenticationMustBe256BitsLong}
+  access-token-validity-ms: 3600000  # 1시간
+
+
+starlogue:
+  session:
+    grace-period-seconds: 60  # 연결 끊김 후 탈주 처리까지 유예 시간 (초)
+
+  ai:
+    dark-history:
+      enabled: true
+      model: gpt-4o-mini
+      temperature: 0.7
+      max-tokens: 200               # 30~180자 제한
+
+    highlight-report:
+      enabled: true
+      model: gpt-4o-mini
+      temperature: 0.6
+      max-tokens: 500
+
+    # RAG 설정 (향후 확장)
+    rag:
+      enabled: false
+      top-k: 5                      # 유사 문서 검색 개수
+
+# ============================================
+# Logging
+# ============================================
+logging:
+  level:
+    com.starlogue: DEBUG
+    org.springframework.ai: DEBUG
+    org.hibernate.SQL: DEBUG
